menambahkan animasi AOS

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 .jumbotron {
   padding-top: 5rem;
-  background-color: #00bfff;
+  background-color: Turquoise;
 }
 
 .logo {
@@ -27,7 +27,7 @@ body {
 
 .jualan,
 .footer {
-  background-color: #00bfff;
+  background-color: #40e0d0;
 }
 
 a {
