lengaki fitur animasi

--- a/style.css
+++ b/style.css
@@ -37,3 +37,17 @@ a {
 .dataproduk {
   width: 100%;
 }
+
+/* /* .download {
+  position: absolute;
+  left: 500px;
+  bottom: -1050px;
+} */
+
+.download {
+  margin-top: 4rem;
+}
+
+body {
+  
+} */
